more info on kubernetes

--- a/topic05-docker/book-a/04.04.md
+++ b/topic05-docker/book-a/04.04.md
@@ -7,8 +7,8 @@ Deploying a container to a remote docker-machine can be done using the `docker` 
 
 ## Deploying to a kubernetes cluster
 
-If you have a kubernets cluster, you can run docker containers in that cluster via kubernets templates & the `kubectl` cli. https://kubernetes.io/docs/user-guide/kubectl-overview/
+Kubernetes is a system for automating deployment, scaling, and management of containerized applications. It groups containers that make up an application into logical units for easy management and discovery. If you have a kubernets cluster, you can run docker containers in that cluster via kubernets templates & the `kubectl` cli. https://kubernetes.io/docs/user-guide/kubectl-overview/
 
 ## Deploying to an OpenShift cluster
 
-If you have an OpenShift cluster (based off kubernetes), you can run docker containers in that cluster via openshift templates & the `oc` cli. https://openshift.io/
+If you have an OpenShift cluster (based on kubernetes), you can run docker containers in that cluster via openshift templates & the `oc` cli. https://openshift.io/
