Add section for explaining the Dockerfile

--- a/topic05-docker/book-a/02.02.md
+++ b/topic05-docker/book-a/02.02.md
@@ -11,7 +11,7 @@ $ docker --version
 Docker version 1.12.6, build ae7d637/1.12.6
 ```
 
-You can list images on you local machine (your list will vary, or could be empty).
+You can list images on you local machine.
 
 ```bash
 $ docker images
