--- a/topic05-docker/book-a/03.03.md
+++ b/topic05-docker/book-a/03.03.md
@@ -39,12 +39,45 @@ Successfully built cdd1ecbfd0cd
 The image should now be listed, with the `latest` tag.
 
 ```bash
+$ docker images
 REPOSITORY                                                               TAG                 IMAGE ID            CREATED             SIZE
 wit/example                                                              latest              cdd1ecbfd0cd        34 seconds ago      708.7 MB
 ```
 
 Dockerfile Reference
 https://docs.docker.com/engine/reference/builder/
+
+## Understanding the build process
+
+The repository contents:
+
+```bash
+├── Dockerfile
+├── main.go
+└── README.md
+```
+
+The Dockerfile:
+
+```Dockerfile
+FROM golang:1.8.1-onbuild
+```
+
+The 'parent' Dockerfile with `ONBUILD` instructions
+
+```Dockerfile
+FROM golang:1.8
+
+RUN mkdir -p /go/src/app
+WORKDIR /go/src/app
+
+# this will ideally be built by the ONBUILD below ;)
+CMD ["go-wrapper", "run"]
+
+ONBUILD COPY . /go/src/app
+ONBUILD RUN go-wrapper download
+ONBUILD RUN go-wrapper install
+```
 
 ## Running
 
@@ -59,10 +92,10 @@ $ docker run -it --rm --name wit wit/example:latest
 ```
 
 To call the server that's running, we need to find the container IP Address.
-You can find this out by running this command in a new terminal/console window.
+You can find this out by running this command in a __new__ terminal/console window.
 
 ```bash
-docker inspect wit | grep IPAddress
+$ docker inspect wit | grep IPAddress
 ```
 
 ```bash
