--- a/topic05-docker/book-a/03.03.md
+++ b/topic05-docker/book-a/03.03.md
@@ -95,8 +95,10 @@ To call the server that's running, we need to find the container IP Address.
 You can find this out by running this command in a __new__ terminal/console window.
 
 ```bash
-$ docker inspect wit | grep IPAddress
+$ docker inspect --format='{{range .NetworkSettings.Networks}}{{.IPAddress}}{{end}}' wit
 ```
+
+Then curl the `/hello` endpoint
 
 ```bash
 $ curl <ip address>:3000/hello
@@ -107,7 +109,6 @@ Try curl localhost to see what the response is:
 
 ```bash
 $ curl localhost:3000/hello
-curl: (7) Failed to connect to localhost port 3000: Connection refused
 ```
 
 ### Accessing the container on localhost
@@ -120,7 +121,7 @@ $ docker run -it --rm --name wit -p 3000:3000 wit/example:latest
 2017/06/06 11:09:54 starting on port 3000
 ```
 
-Now try curling it on localhost again:
+Now try curling it on localhost again.
 
 ```bash
 $ curl localhost:3000/hello
