Add more oc command examples for exposing a route

--- a/topic05-docker/book-a/04.04.md
+++ b/topic05-docker/book-a/04.04.md
@@ -23,10 +23,26 @@ $ docker tag wit/example:latest <docker hub username>/example:latest
 $ docker push <docker hub username>/example:latest
 ```
 
-Once pushed, you can reference the image in the remote kubernets/OpenShift cluster
+### Running the image in an OpenShift cluster (optional)
+
+Once pushed, you can reference the image in the remote kubernetes/OpenShift cluster
 
 ```bash
 $ oc new-project wit
 $ oc run wit --image=<docker hub username>/example --port=3000 
 deploymentconfig "wit" created
+```
+
+The pod can be exposed via a `service` & `route`
+
+```bash
+$ oc expose rc wit-1 --port=3000 --target-port=3000 --name=wit
+$ oc expose service wit --name=wit
+```
+
+The exposed `route` can be used to access the running container.
+
+```bash
+$ curl wit-wit.osm4.skunkhenry.com/hello
+$ hello world
 ```
