--- a/topic05-docker/book-a/04.04.md
+++ b/topic05-docker/book-a/04.04.md
@@ -2,13 +2,13 @@
 
 ## Using 'docker machine'
 
-A 'docker machine' is a remote instance running docker. More info on setting one up can be found at https://docs.docker.com/machine/.
+A 'docker machine' is a local or remote instance running docker. More info on setting one up can be found at https://docs.docker.com/machine/.
 Deploying a container to a remote docker-machine can be done using the `docker` cli. Instead of all commands running against your local machine, they run against the remote machine. Whenever you build an image, it is being built on the remote docker machine. If you pull an image, it gets pulled onto the remote docker machine.
 
 
 ## Using kubernetes or OpenShift
 
-Kubernetes is a system for automating deployment, scaling, and management of containerized applications. It groups containers that make up an application into logical units for easy management and discovery. If you have a kubernets cluster, you can run docker containers in that cluster via kubernets templates & the `kubectl` cli. https://kubernetes.io/docs/user-guide/kubectl-overview/
+Kubernetes is a system for automating deployment, scaling, and management of containerized applications. It groups containers that make up an application into logical units for easy management and discovery. If you have a kubernetes cluster, you can run docker containers in that cluster via kubernetes templates & the `kubectl` cli. https://kubernetes.io/docs/user-guide/kubectl-overview/
 
 If you have an OpenShift cluster (based on kubernetes), you can run docker containers in that cluster via openshift templates & the `oc` cli. https://openshift.io/
 
