Address PR feedback

--- a/topic05-git-advanced/book/01.01.md
+++ b/topic05-git-advanced/book/01.01.md
@@ -6,7 +6,7 @@ Saving changes is a two-step process in Git:
 
 ```bash
 # Stages changes to the staging area
-git add
+git add <files>
 
 # Commits a snapshot of changes to the local repo
 git commit
@@ -32,7 +32,7 @@ git add **/*.js
 git reset app.js
 ```
 
-## Commiting
+## Committing
 
 * Commits the staged snapshot to the local repository
 * Include a meaningful commit message
@@ -43,14 +43,14 @@ git reset app.js
 git commit
 
 # Commits with a message
-git commit -m "My change"
+git commit -m "Make a meaningful change"
 ```
 
 Twofer - commit and add in one command:
 
 ```bash
 # Stage & commit all changed files with a message
-git commit -am "RHMAP-12345 - My files on disk are perfect"
+git commit -am "FH-12345 - My files on disk are perfect"
 ```
 
 ## Branching
