--- a/topic05-git-advanced/book/02.02.md
+++ b/topic05-git-advanced/book/02.02.md
@@ -4,13 +4,12 @@
 
 * Git (2.x)
 * (Optional) hub - https://github.com/github/hub
-* Access to the fheng/git-tutorial repo (ask if you don't have)
+* Fork the repository from https://github.com/feedhenry/git-tutorial
 
-Clone this repository
 
 ```bash
-# Don't fork
-git clone git@github.com:fheng/git-tutorial.git
+# Clone the forked repository
+git clone git@github.com:<github_username>/git-tutorial.git
 ```
 
 ## Overview
@@ -28,7 +27,7 @@ Rebasing and Merging are two methods that achieve the same goal - the integratio
 
 
 ![rebase on master](rebase-on-master-cropped.gif "Rebase on Master")
-![reabse on feature](rebase-on-feature-cropped.gif "Rebase on Feature Branch")
+![rebase on feature](rebase-on-feature-cropped.gif "Rebase on Feature Branch")
 
 ### Practical
 
@@ -36,13 +35,15 @@ Rebasing and Merging are two methods that achieve the same goal - the integratio
 cd git-tutorial # From earlier
 git fetch
 git checkout rebase
+
 # The rebase branch was branched from master a while ago
 # It's out of date (master has moved on)
 # And there's bad commits in our history that we're going to fixup
-git log --pretty=oneline # take a look at the commits we've got
-# https://github.com/fheng/git-tutorial/pull/3
+git log --pretty=oneline
+
 # First, lets interactively rebase our last 4 commits
 git rebase -i HEAD~4 # Note the lack of a branch
+
 # Fix up the commits - think about re-ordering or (s)quashing
 # the version bumps and (r)eword the commit messages. 
 # Also, delete commits that are of no value
@@ -51,35 +52,4 @@ git rebase origin/master
 # Alternatively:
 # We can do both a history rewrite and a rebase via:
 git rebase -i origin/master
-```
-
-Next, we're going to have a rebase race
-
-![reabse race](rebase-race.gif "Rebase Race")
-
-```bash
-# branch from the existing `race` branch
-git checkout -b your-name-race origin/race
-
-
-# Each of you!!!!!
-# Add your name to to `models/append.json` as fast as you can, and commit it
-#
-# e.g.
-#   vi models/append.json
-#     add your name
-#   git add models/append.json
-#   git commit -m "Adding <Your Name>"
-
-# Send a PR back to the `race` branch
-git push origin your-name-race
-
-# This command will work if you have 'hub' installed
-# Otherwise, create a PR from the Github interface at 
-# https://github.com/fheng/git-tutorial/compare
-git pull-request -b race -m "Adding <Your Name>"
-
-# But wait, there's more - the race branch is updating frequently :)
-# http://bob.feedhenry.net:8080/job/git-tutorial-race/
-# Get your PRs merged
 ```
