--- a/topic05-git-advanced/book/04.04.md
+++ b/topic05-git-advanced/book/04.04.md
@@ -43,6 +43,6 @@ git tag -d v99.0.0
 git push origin :refs/tags/v99.0.0
 
 # A little bit about annotated tags
-git tag -s -a v0.99.0-annotated -m "my tag v0.99.0-annotated"
+git tag -s v0.99.0-annotated -m "my tag v0.99.0-annotated"
 git show v0.99.0-annotated
 ```
