--- a/topic05-git-advanced/book/06.06.md
+++ b/topic05-git-advanced/book/06.06.md
@@ -31,6 +31,6 @@ Example pre-commit hook to lint code, stored in `.git/hooks/pre-commit`
 ```bash
 #!/usr/bin/bash --login
 
-jshint ./lib
+eslint ./lib
 ```
 
