--- a/topic05-git-advanced/book/07.07.md
+++ b/topic05-git-advanced/book/07.07.md
@@ -23,7 +23,7 @@ $ git config --global core.editor emacs
 git config --global commit.template ~/.git-commit-template
 ```
 
-Gerard's current ~/.git-commit-template file: https://git.io/v14bx
+Gerard's current ~/.git-commit-template file: https://git.io/vQJzx
 
 Most interesting is the user's global config
 
