--- a/topic05-git-advanced/book/09.09.md
+++ b/topic05-git-advanced/book/09.09.md
@@ -28,9 +28,9 @@ $ tree -L 1 ./.git
 `COMMIT_EDITMSG` can be useful with the hub command to create a pull-request on github with a single command
 
 ```bash
-# Create a PR against master branch of the repo in the fheng org
+# Create a PR against master branch of the repo in the feedhenry org
 # with the contents of the most recent commit message as the description
-git pull-request -b fheng:master -F ./.git/COMMIT_EDITMSG
+git pull-request -b feedhenry:master -F ./.git/COMMIT_EDITMSG
 ```
 
 ## Git objects - what are they?
