moved images to img subfolder

--- a/topic05-git-advanced/book/02.02.md
+++ b/topic05-git-advanced/book/02.02.md
@@ -26,8 +26,8 @@ Why rewrite history?
 Rebasing and Merging are two methods that achieve the same goal - the integration of changes from one branch into another branch
 
 
-![rebase on master](rebase-on-master-cropped.gif "Rebase on Master")
-![rebase on feature](rebase-on-feature-cropped.gif "Rebase on Feature Branch")
+![rebase on master](img/01.gif)
+![rebase on feature](img/02.gif)
 
 ### Practical
 
